--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="description"
 content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
 
-<meta name="keywords" content="online tools, pdf tools, image tools, calculator, developer tools, free tools">
+<meta name="keywords" content="online tools, pdf tools, image tools, calculator ,TechTools, TechTools online, TechTools best, TechTools tools,TechTools free tools, developer tools, free tools">
 
 <meta name="author" content="TechTools">
 <link rel="icon" href="img/logo.png" type="image/png">
@@ -171,3 +171,4 @@ TechTools is committed to providing reliable and secure online utilities for dai
 
 </body>
 </html>
+
