--- a/privacy.html
+++ b/privacy.html
@@ -253,6 +253,12 @@ TechTools is committed to providing reliable and secure online utilities for dai
 
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-<script src="js/main.js"></script>
+<script>
+    /* LOADER */
+window.addEventListener("load", ()=>{
+document.getElementById("loader").style.display="none";
+});
+</script>
 </body>
 </html>
+
