--- a/qr-generator.html
+++ b/qr-generator.html
@@ -353,6 +353,13 @@ TechTools is committed to providing reliable and secure online utilities for dai
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script src="js/main.js"></script>
+    <script>
+    /* LOADER */
+window.addEventListener("load", ()=>{
+document.getElementById("loader").style.display="none";
+});
+</script>
 
 </body>
 </html>
+
