--- a/payslip.html
+++ b/payslip.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Free Online Tools | TechTools</title>
+<title>Payslip | TechTools</title>
 
 <meta name="description"
 content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
@@ -305,3 +305,4 @@ TechTools is committed to providing reliable and secure online utilities for dai
 
 </body>
 </html>
+
