--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <meta name="description"
 content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
 
-<meta name="keywords" content="online tools, pdf tools, image tools, calculator, developer tools, free tools">
+<meta name="keywords" content="online tools,techtools,contact,contact us,techtools.best, pdf tools, image tools, calculator, developer tools, free tools">
 
 <meta name="author" content="TechTools">
 <link rel="icon" href="img/logo.png" type="image/png">
@@ -99,7 +99,7 @@ Please use the form below to contact us. We usually reply within 24–48 hours.
 <!-- GOOGLE FORM -->
 <iframe
 src="https://docs.google.com/forms/d/e/1FAIpQLSetc_SJsbi04h6lH5xvaAWN82JSz7zDyTjneUZLLHbnpqF69A/viewform?embedded=true"
-style="width:100%; height:1000px; border:0;">
+style="width:100%; height:959px; border:0;" scrolling="no">
 Loading…
 </iframe>
 
@@ -158,4 +158,5 @@ document.getElementById("loader").style.display="none";
 </script>
 </body>
 </html>
+
 
