--- a/index.html
+++ b/index.html
@@ -10,8 +10,24 @@
 <meta name="description"
 content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
 
-<meta name="keywords" content="online tools, pdf tools, image tools, calculator ,TechTools, TechTools online, TechTools best, TechTools tools,TechTools free tools, developer tools, free tools">
-
+<meta name="keywords" content="
+online tools,
+free online tools,
+pdf tools,
+image tools,
+calculator tools,
+developer tools,
+web tools,
+seo tools,
+utility tools,
+TechTools,
+TechTools best,
+TechTools online,
+free tools website,
+all in one tools,
+salary slip generate,
+no login tools
+">
 <meta name="author" content="TechTools">
 <link rel="icon" href="img/logo.png" type="image/png">
 <link rel="preconnect" href="https://cdn.jsdelivr.net">
@@ -177,5 +193,6 @@ document.getElementById("loader").style.display="none";
 
 </body>
 </html>
+
 
 
