--- a/youtube-tags.html
+++ b/youtube-tags.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Free Online Tools | TechTools</title>
+<title>Generate Youtube videos tags | TechTools</title>
 
 <meta name="description"
 content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
@@ -13,10 +13,10 @@ content="Free online tools for PDF, images, calculators and developers. Secure, 
 <meta name="keywords" content="
 online tools,
 free online tools,
-pdf tools,
-image tools,
-calculator tools,
-developer tools,
+youtube tag generator,
+youtube tag generator online,
+youtube tag generator free,
+how to generate tags for youtbe,
 web tools,
 seo tools,
 utility tools,
@@ -313,3 +313,4 @@ document.getElementById("loader").style.display="none";
 
 </body>
 </html>
+
