--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@ TechTools is committed to providing reliable and secure online utilities for dai
 
 </footer>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3666396936157058"
+     crossorigin="anonymous"></script>
 <!-- JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 <script src="tools-data.js" defer></script>
@@ -193,6 +194,7 @@ document.getElementById("loader").style.display="none";
 
 </body>
 </html>
+
 
 
 
