--- a/image-resizer.html
+++ b/image-resizer.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Free Online Tools | TechTools</title>
+<title>Free Image Resizer: Resize Photos and Logos Online | TechTools</title>
 
 <meta name="description"
 content="Free Image Resizer: Resize Photos and Logos Online | TechTools
@@ -303,3 +303,4 @@ document.getElementById("loader").style.display="none";
 
 </body>
 </html>
+
