--- a/payslip.html
+++ b/payslip.html
@@ -5,12 +5,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Payslip | TechTools</title>
+<title>Free Online Tools | TechTools</title>
 
 <meta name="description"
 content="Free online tools for PDF, images, calculators and developers. Secure, fast and easy to use tools for everyday needs.">
 
-<meta name="keywords" content="online tools, payslip generate, image tools, salary slip generate,salary, slip,tools,techtools, developer tools, free tools">
+<meta name="keywords" content="online tools, payslip generate, Generate Payslips, salary slip generate,salary slip online, salary slip generate free online, free tools">
 
 <meta name="author" content="TechTools">
 <link rel="icon" href="img/logo.png" type="image/png">
@@ -78,6 +78,15 @@ data-bs-dismiss="offcanvas"></button>
 
 </div>
 
+<!-- HERO -->
+<section class="hero mt-5 pt-4">
+
+<h1>Generate Your Salary Slip Free </h1>
+
+<p>Fast • Secure • Simple • 100% Free</p>
+
+</section>
+
 <div class="container px-2 px-md-4 mt-3 mb-5" id="payslip">
 
 <!-- HEADER -->
@@ -85,7 +94,7 @@ data-bs-dismiss="offcanvas"></button>
 
 <div class="card-box-custom text-center">
 
-<input id="title" class="form-control mb-3 fw-bold text-center fs-5" placeholder="Payslip Title">
+<input id="title" class="form-control mb-3 fw-bold text-center fs-5" value="Payslip" placeholder="Payslip Title">
 
 <input id="company" class="form-control mb-3" placeholder="Company Name">
 
@@ -108,6 +117,9 @@ data-bs-dismiss="offcanvas"></button>
 <label>Pay Date</label>
 <input type="date" id="date" class="form-control mb-2">
 
+<label>Pay Period</label>
+<input type="month" id="payperiod" class="form-control">
+
 <label>Working Days</label>
 <input type="number" id="days" class="form-control">
 
@@ -126,6 +138,8 @@ data-bs-dismiss="offcanvas"></button>
 
 <label>Employee ID</label>
 <input id="empId" class="form-control">
+<label>Department</label>
+<input id="department" class="form-control">
 
 </div>
 </div>
@@ -279,6 +293,66 @@ Total Deductions: ₹ <span id="dedTotal">0</span>
   </table>
 
 </div>
+
+<section class="container my-5">
+
+  <h1>What Is a Payslip? Meaning, Uses, and How to Generate One Online</h1>
+
+  <p>
+    A payslip, also known as a salary slip, is an important financial document provided by employers to employees every time they receive their salary. It clearly shows how much an employee has earned during a specific pay period, including their gross salary, deductions, and the final net pay credited to their account. Apart from being a record of income, a payslip also serves as proof of employment and earnings.
+  </p>
+
+  <p>
+    Employees often use payslips for multiple purposes such as applying for loans, filing income tax returns, renting a house, or maintaining personal financial records. For employers, payslips help maintain transparency and trust while ensuring compliance with payroll regulations.
+  </p>
+
+  <h2>Why Use an Online Payslip Generator?</h2>
+
+  <p>
+    An online payslip generator makes the process of creating salary slips quick and hassle-free. Instead of manually designing documents or relying on complex software, users can generate professional-looking payslips within minutes. These tools are especially useful for small businesses, startups, freelancers, and HR professionals who want flexibility and customization.
+  </p>
+
+  <p>
+    A modern payslip generator allows you to customize layouts, edit text fields, and include only the components that are relevant to your company or organization. This ensures that the payslip reflects your brand style and internal payroll structure.
+  </p>
+
+  <h2>Main Sections of a Payslip</h2>
+
+  <h3>Header Section</h3>
+  <p>
+    The header usually contains the payslip title, company name, and company address. This section helps identify the organization issuing the salary slip and gives the document a professional appearance.
+  </p>
+
+  <h3>Employee and Payslip Information</h3>
+  <p>
+    This section includes key details such as employee name, employee ID, pay date, pay period, department, and total working days. These details help link the payslip to a specific employee and salary cycle.
+  </p>
+
+  <h3>Salary Details</h3>
+  <p>
+    The salary content is divided into earnings and deductions. Earnings may include basic salary, bonuses, overtime payments, house rent allowance (HRA), leave travel allowance (LTA), and insurance benefits. These components together form the gross salary.
+  </p>
+
+  <p>
+    Deductions include items such as employee provident fund (EPF), income tax, pension or superannuation contributions, and other statutory or company-specific deductions. After subtracting deductions from gross earnings, the remaining amount is shown as the net pay.
+  </p>
+
+  <h2>Download or Generate Sample Payslip Templates</h2>
+
+  <p>
+    Many payslip generators provide multiple layout options such as grid-based designs and list-style formats. Users can choose from different sample templates depending on their preference for clarity, presentation, and branding. These templates help create clean, readable, and well-structured payslips suitable for printing or digital sharing.
+  </p>
+
+  <p>
+    A free online payslip generator gives users full control over their salary slips, making it easy to include company details, customize salary components, and instantly download the final document in PDF or Word format.
+  </p>
+
+  <p>
+    Whether you are an employer preparing payroll documents or an individual needing a salary record, an online payslip generator is a reliable and efficient solution.
+  </p>
+
+</section>
+
 <!-- FOOTER -->
 <footer>
 
@@ -305,4 +379,3 @@ TechTools is committed to providing reliable and secure online utilities for dai
 
 </body>
 </html>
-
