--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ TechTools is committed to providing reliable and secure online utilities for dai
      crossorigin="anonymous"></script>
 <!-- JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-<script src="tools-data.js" defer></script>
+<script src="js/tools-data.js" defer></script>
 <script src="js/main.js"></script>
   <script>
     /* LOADER */
