--- a/hastag-generator.html
+++ b/hastag-generator.html
@@ -92,9 +92,9 @@ data-bs-dismiss="offcanvas"></button>
 
   <div class="tt-hg-box">
     <div class="header headslsfei">
-      <h2>🔥 Real YouTube Keyword Research</h2>
-      <p>Generate tags for your YouTube videos</p>
-      <p>Quickly and easily find tags and improve discoverability with the powerful TechTools Tag Generator.</p>
+      <h2>🔥 Real # Hastag Generator</h2>
+      <p>Generate Hastags for your videos</p>
+      <p>Quickly and easily find Hastag and improve discoverability with the powerful TechTools Hastag Generator.</p>
     </div>
   <div class="custom-padding p-4">  
 
