--- a/hastag-generator.html
+++ b/hastag-generator.html
@@ -345,6 +345,8 @@ TechTools is committed to providing reliable and secure online utilities for dai
 </p>
 
 </footer>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3666396936157058"
+     crossorigin="anonymous"></script>
 <script src="js/hastag-generator.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
