--- a/youtube-tags.html
+++ b/youtube-tags.html
@@ -300,6 +300,8 @@ TechTools is committed to providing reliable and secure online utilities for dai
 
 
 <!-- JS -->
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3666396936157058"
+     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 
 <script src="js/youtube-tags.js"></script>
