--- a/hastag-generator.html
+++ b/hastag-generator.html
@@ -9,9 +9,9 @@
 <title>Free Online Tools | TechTools</title>
 
 <meta name="description"
-content="Generate # Hastag for Your Youtube Video , Shorts ,Instgram ,Facebook and TikTok for Free">
+content="Generate # Hashtag for Your Youtube Video , Shorts ,Instagram ,Facebook and TikTok for Free">
 
-<meta name="keywords" content="online tools,online hastag generator free, online hastag generator, youtube hastag generaor,# hastag generator, yt shorts hastag generaor, free online tools,techtools">
+<meta name="keywords" content="online tools,online Hashtag generator free, online Hashtag generator, youtube Hashtag generaor,# Hashtag generator, yt shorts Hashtag generaor, free online tools,techtools">
 
 <meta name="author" content="TechTools">
 <link rel="icon" href="img/logo.png" type="image/png">
@@ -82,7 +82,7 @@ data-bs-dismiss="offcanvas"></button>
 <!-- HERO -->
 <section class="hero mt-5 pt-4">
 
-<h1>Generate # Hastag for Your Youtube Video , Shorts ,Instgram ,Facebook and TikTok for Free .</h1>
+<h1>Generate # Hashtag for Your Youtube Video , Shorts ,Instagram ,Facebook and TikTok for Free .</h1>
 
 <p>Fast • Secure • Simple • 100% Free</p>
 
@@ -92,9 +92,9 @@ data-bs-dismiss="offcanvas"></button>
 
   <div class="tt-hg-box">
     <div class="header headslsfei">
-      <h2>🔥 Real # Hastag Generator</h2>
-      <p>Generate Hastags for your videos</p>
-      <p>Quickly and easily find Hastag and improve discoverability with the powerful TechTools Hastag Generator.</p>
+      <h2>🔥 Real # Hashtag Generator</h2>
+      <p>Generate Hashtags for your videos</p>
+      <p>Quickly and easily find Hashtag and improve discoverability with the powerful TechTools Hashtag Generator.</p>
     </div>
   <div class="custom-padding p-4">  
 
