--- a/payslip.html
+++ b/payslip.html
@@ -249,7 +249,13 @@ Total Deductions: ₹ <span id="dedTotal">0</span>
 <button class="btn btn-info" onclick="saveWord()">📝 Word</button>
 
 </div>
-
+<!-- DISCLAIMER BOX -->
+<div style="background:#fff3cd; border-left:4px solid #f59e0b; border-radius:8px; padding:14px 18px; margin:16px 0; font-size:0.9rem; color:#7c4a00;">
+  <strong>⚠️ Disclaimer:</strong> This tool is intended for personal salary record-keeping, HR documentation, and educational purposes only. 
+  TechTools does not encourage or support the creation of false, fake, or fraudulent documents. 
+  Any misuse of this tool is solely the responsibility of the user. 
+  Generated payslips are not official financial documents and should not be used for illegal purposes.
+</div>
 </div>
 <div id="printView">
 
