--- a/hastag-generator.html
+++ b/hastag-generator.html
@@ -135,7 +135,7 @@ data-bs-dismiss="offcanvas"></button>
 
 </div>
 
-<section class="container my-5">
+<section class="container content-section my-5">
 
   <h1>Real Autocomplete Hashtag Generator – A Simple Tool That Actually Works</h1>
 
