--- a/image-resizer.html
+++ b/image-resizer.html
@@ -197,7 +197,7 @@ data-bs-dismiss="offcanvas"></button>
 </div>
 </div>
 
-<section class="container my-5">
+<section class="container content-section my-5">
 
   <h2>What Is Image File Size?</h2>
 
