--- a/payslip.html
+++ b/payslip.html
@@ -300,7 +300,7 @@ Total Deductions: ₹ <span id="dedTotal">0</span>
 
 </div>
 
-<section class="container my-5">
+<section class="container content-section my-5">
 
   <h1>What Is a Payslip? Meaning, Uses, and How to Generate One Online</h1>
 
