--- a/youtube-tags.html
+++ b/youtube-tags.html
@@ -166,7 +166,7 @@ data-bs-dismiss="offcanvas"></button>
 <!-- SEO META -->
 <meta name="description" content="TechTools YouTube Tag Generator helps you find real ranking tags. Generate SEO-optimized YouTube tags within 300 or 500 characters. Free, fast, and no signup required.">
 
-<section class="container my-5">
+<section class="container content-section my-5">
 
   <h1>YouTube Tag Generator by TechTools – Find Real Ranking Tags</h1>
 
