--- a/qr-generator.html
+++ b/qr-generator.html
@@ -228,7 +228,7 @@ Clear
 
 </div>
 </div>
-<div class="container mt-4">
+<div class="container content-section mt-4">
     <div class="row">
         <article>
 
